--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,3 +3,5 @@ $description-color: #7d7d7d;
 $link-color: #000080;
 $dark-gray: #333;
 $light-gray: #aaa;
+
+$theme-gradient: linear-gradient(72deg, #291e95, #cc007a);
