--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,5 +3,9 @@ $description-color: #7d7d7d;
 $link-color: #000080;
 $dark-gray: #333;
 $light-gray: #aaa;
+$post-link-color: #cc007a;
+
+$inline-dimmed-color: #e4dcf1;
+$inline-text-color: #451e3e;
 
 $theme-gradient: linear-gradient(72deg, #291e95, #cc007a);
