--- a/src/components/top/index.scss
+++ b/src/components/top/index.scss
@@ -6,4 +6,13 @@
   height: 60px;
   border: 0px solid #000000;
   background: $theme-gradient;
+
+  .link {
+    font-size: 28px;
+    padding: 5px;
+    color: #fff;
+    opacity: 0.8;
+    display: block;
+    margin-left: 24px;
+  }
 }
