--- a/src/components/top/index.scss
+++ b/src/components/top/index.scss
@@ -9,10 +9,12 @@
 
   .link {
     font-size: 28px;
-    padding: 5px;
+    padding-top: 8px;
     color: #fff;
-    opacity: 0.8;
+    opacity: 0.7;
     display: block;
-    margin-left: 24px;
+    margin-left: 20px;
+    font-family: 'Catamaran';
+    font-weight: 800;
   }
 }
