--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,7 +5,7 @@ $dark-gray: #333;
 $light-gray: #aaa;
 $post-link-color: #cc007a;
 
-$inline-dimmed-color: #e4dcf1;
-$inline-text-color: #451e3e;
+$inline-dimmed-color: rgb(236, 230, 245);
+$inline-text-color: #4b2043;
 
 $theme-gradient: linear-gradient(72deg, #291e95, #cc007a);
