--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -1,7 +1,5 @@
-@import url('//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css');
 body {
-  font-family: 'Spoqa Han Sans', 'Spoqa Han Sans JP', 'Noto Sans Korean',
-    sans-serif;
+  font-family: 'Noto Sans KR', sans-serif;
   text-shadow: 0 0 0.1px rgba(0, 0, 0, 0.3);
   -webkit-text-size-adjust: antialiased;
   -moz-osx-font-smoothing: grayscale;
