--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -1,9 +1,14 @@
-.header {
-  margin-top: 0;
-}
-
 .home-header {
-  font-size: 64px;
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+  margin-top: 0;
+  border-bottom: none;
+  font-weight: 900;
+  font-size: 48px;
+  letter-spacing: -2px;
+  background: #fff;
+  z-index: 1;
 }
 
 .link {
