--- a/src/components/thumbnail-item/index.scss
+++ b/src/components/thumbnail-item/index.scss
@@ -7,6 +7,7 @@
   padding-bottom: 12px;
   box-shadow: none;
   transition: text-shadow 0.3s;
+  opacity: 0;
 
   h3 {
     color: $dark-gray;
@@ -27,4 +28,17 @@
 
 .thumbnail:hover {
   text-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
+}
+
+.thumbnail.visible {
+  animation: fadein 0.4s forwards;
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
