--- a/src/components/category/index.scss
+++ b/src/components/category/index.scss
@@ -15,19 +15,18 @@
   .item {
     display: inline-block;
     margin: 0.25rem 6px 0.25rem 0;
-    border-radius: 8px;
-    border: 1px solid grey;
+    border-radius: 15px;
+    border: 1px solid #666;
     white-space: normal;
-    -webkit-box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.1);
-    box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1);
     box-sizing: border-box;
 
     a {
       display: block;
       padding: 14px 16px 16px 16px;
-      border-radius: 8px;
       font-size: 13px;
-      color: grey;
+      color: #666;
       -webkit-box-shadow: 0 -3px 12px rgba(0, 0, 0, 0.05);
       box-shadow: 0 -3px 12px rgba(0, 0, 0, 0.05);
       box-sizing: border-box;
