--- a/src/components/thumbnail-item/index.scss
+++ b/src/components/thumbnail-item/index.scss
@@ -34,6 +34,15 @@
   animation: fadein 0.4s forwards;
 }
 
+@-webkit-keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 @keyframes fadein {
   from {
     opacity: 0;
