:gift: feat: Add fira code font

--- a/src/styles/code.scss
+++ b/src/styles/code.scss
@@ -5,19 +5,22 @@
  * @custoimized by Jbee
  */
 
+@import url(https://cdn.jsdelivr.net/gh/tonsky/FiraCode@1.206/distr/fira_code.css);
 @import './variables.scss';
 
 code[class*='language-'],
 pre[class*='language-'] {
   color: #e0e0e0;
   background: none;
-  font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+  font-family: 'Fira Code', 'Consolas', 'Monaco', 'Andale Mono', 'Ubuntu Mono',
+    monospace;
   text-align: left;
   white-space: pre;
   word-spacing: normal;
   word-break: normal;
   word-wrap: normal;
-  line-height: 1.7;
+  line-height: 1.6;
+  font-size: 13px;
 
   -moz-tab-size: 2;
   -o-tab-size: 2;
