--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,3 +9,8 @@ $inline-dimmed-color: rgb(236, 230, 245);
 $inline-text-color: #4b2043;
 
 $theme-gradient: linear-gradient(72deg, #291e95, #cc007a);
+
+// category
+$category-border-color: #ecf0f2;
+$category-background-color: #f4f7f8;
+$category-text-color: #666;
