:wrench: fix: Change position of top link

--- a/src/components/top/index.scss
+++ b/src/components/top/index.scss
@@ -8,11 +8,11 @@
   background: $theme-gradient;
 
   .link {
+    display: inline-block;
     font-size: 28px;
     padding-top: 8px;
     color: #fff;
     opacity: 0.7;
-    display: block;
     margin-left: 20px;
     font-family: 'Catamaran';
     font-weight: 800;
