--- a/src/components/top/index.scss
+++ b/src/components/top/index.scss
@@ -10,7 +10,7 @@
     display: inline-block;
     font-size: 28px;
     padding-top: 8px;
-    color: #fff;
+    color: $top-header-text-color;
     opacity: 0.7;
     margin-left: 20px;
     font-family: 'Catamaran';
