--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,16 +1,29 @@
 // app
 $theme-gradient: linear-gradient(72deg, #291e95, #cc007a);
+$top-header-text-color: #fff;
+
+/**
+ * @light theme
+ */
+
+// body
+$light-background-color: #fff;
+$default-text-shadow: 0 0 0.1px rgba(0, 0, 0, 0.3);
+$hover-text-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
 
 // index
 $dimmed-color: #eef5db;
-$description-color: #7d7d7d;
 $link-color: #000080;
 $dark-gray: #333;
+$middle-gray: #7d7d7d;
 $light-gray: #aaa;
+
+// blog-templates
 $post-link-color: #cc007a;
+$post-background-color: #fceff7;
 
 // code
-$inline-dimmed-color: rgb(236, 230, 245);
+$inline-dimmed-color: #ece5f1;
 $inline-text-color: #4b2043;
 
 // category
@@ -19,3 +32,8 @@ $category-highlight-border-color: #909da1;
 $category-background-color: #f4f7f8;
 $category-text-color: #666;
 $category-highlight-text-color: #636c6e;
+
+/**
+ * @dark theme
+ */
+$dark-background-color: #282c35;
