--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -5,6 +5,7 @@ body {
   background-color: $light-background-color;
   -webkit-text-size-adjust: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  transition: background-color 0.2s, color 0.2s;
 }
 
 body.light {
