:wrench: fix: Extract theme scss to styles directory

--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -1,4 +1,6 @@
 @import '../styles/variables.scss';
+@import '../styles/light-theme.scss';
+@import '../styles/dark-theme.scss';
 
 body {
   font-family: 'Noto Sans KR', sans-serif;
@@ -6,151 +8,4 @@ body {
   -webkit-text-size-adjust: antialiased;
   -moz-osx-font-smoothing: grayscale;
   transition: background-color 0.2s, color 0.2s;
-}
-
-body.light {
-  background-color: $light-background-color;
-  text-shadow: $light-text-shadow;
-
-  // home
-  .home-header {
-    color: $dark-gray;
-  }
-
-  .bio {
-    .author-name-content {
-      background-color: $light-category-border-color;
-    }
-    .author-introduction {
-      color: $middle-gray;
-    }
-    a {
-      color: $light-link-color;
-    }
-  }
-
-  .category-container {
-    border-top: 1px solid $light-category-border-color;
-    border-bottom: 1px solid $light-category-border-color;
-    border-right: 6px solid $light-category-border-color;
-    border-left: 6px solid $light-category-border-color;
-    background-color: $light-category-background-color;
-    .item {
-      border: 1px solid $light-category-border-color;
-      background-color: $light-category-item-color;
-      -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1);
-      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1);
-      a {
-        color: $light-category-text-color;
-      }
-      &[aria-selected='true'] {
-        border: 2px solid $light-category-highlight-border-color;
-        font-weight: bolder;
-      }
-      &[aria-selected='true'] a {
-        color: $light-category-highlight-text-color;
-      }
-    }
-  }
-
-  .thumbnail {
-    h3 {
-      color: $dark-gray;
-    }
-    p {
-      color: $middle-gray;
-    }
-    &:hover {
-      text-shadow: $light-hover-text-shadow;
-    }
-  }
-
-  .footer {
-    color: $light-gray;
-    a {
-      color: $dark-gray;
-    }
-  }
-
-  // post
-  .navigator {
-    a {
-      background-color: $post-background-color;
-      color: $post-link-color;
-    }
-  }
-}
-
-body.dark {
-  background-color: $dark-background-color;
-  text-shadow: $dark-text-shadow;
-  color: $dark-light-font-color;
-
-  // home
-  .home-header {
-    color: $dark-light-font-color;
-  }
-
-  .bio {
-    .author-name-content {
-      background-color: $dark-category-border-color;
-    }
-    .author-introduction {
-      color: $dark-middle-font-color;
-    }
-    a {
-      color: $dark-link-color;
-    }
-  }
-
-  .category-container {
-    border-top: 1px solid $dark-category-border-color;
-    border-bottom: 1px solid $dark-category-border-color;
-    border-right: 6px solid $dark-category-border-color;
-    border-left: 6px solid $dark-category-border-color;
-    background-color: $dark-category-background-color;
-    .item {
-      border: 1px solid $dark-category-border-color;
-      background-color: $dark-category-item-color;
-      -webkit-box-shadow: 0px 1px 1px rgba(255, 255, 255, 0.1);
-      box-shadow: 0px 1px 1px rgba(255, 255, 255, 0.1);
-      a {
-        color: $dark-category-text-color;
-      }
-      &[aria-selected='true'] {
-        border: 2px solid $dark-category-highlight-border-color;
-        font-weight: bolder;
-      }
-      &[aria-selected='true'] a {
-        color: $dark-category-highlight-text-color;
-      }
-    }
-  }
-
-  .thumbnail {
-    h3 {
-      color: $dark-light-font-color;
-    }
-    p {
-      color: $dark-middle-font-color;
-    }
-    &:hover {
-      text-shadow: $dark-hover-text-shadow;
-    }
-  }
-
-  .footer {
-    color: $dark-middle-font-color;
-    a {
-      color: $dark-lightest-font-color;
-    }
-  }
-
-  // post
-  .navigator {
-    a {
-      background-color: $post-background-color;
-      color: $post-link-color;
-    }
-  }
 }
