--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -7,5 +7,8 @@ body {
   background-color: $light-background-color;
   -webkit-text-size-adjust: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -moz-font-smoothing: antialiased;
+  text-rendering: optimizelegibility;
   transition: background-color 0.3s, color 0.3s;
 }
