fix: Change inline code block style

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -31,8 +31,8 @@ $navigator-background-color: #fceff7;
 $blockquote-text-color: #999;
 
 // code
-$inline-dimmed-color: #ece5f1;
-$inline-text-color: #4b2043;
+$inline-dimmed-color: #fffbfe;
+$inline-text-color: #da3a6a;
 
 // category
 $light-category-border-color: #ecf0f2;
