--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -10,3 +10,21 @@ body {
   // text-rendering: optimizelegibility;
   transition: background-color 0.3s, color 0.3s;
 }
+
+h1 {
+  margin-top: 2em;
+  font-size: 2.15em;
+  letter-spacing: -1px;
+}
+
+h2 {
+  margin-top: 1.5em;
+  margin-bottom: 0px;
+  font-size: 1.5em;
+  letter-spacing: -1px;
+}
+
+h3 {
+  font-size: 1.25em;
+  letter-spacing: -1px;
+}
