fix: add media query

--- a/src/styles/code.scss
+++ b/src/styles/code.scss
@@ -30,7 +30,7 @@ pre[class*='language-'] {
   word-break: normal;
   word-wrap: normal;
   line-height: 1.6;
-  font-size: 1em;
+  font-size: 0.95em;
 
   -moz-tab-size: 2;
   -o-tab-size: 2;
@@ -52,9 +52,15 @@ pre[class*='language-']::-webkit-scrollbar {
 /* Code blocks */
 pre[class*='language-'] {
   padding: 1.2em;
-  margin: 1.5em -3em;
+  margin: 1.5em -2.5em;
   overflow: auto;
   border-radius: 0.6em;
+}
+
+@media screen and (max-width: 730px) {
+  pre[class*='language-'] {
+    margin: 1.5em 0em;
+  }
 }
 
 :not(pre) > code[class*='language-'],
