--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -13,20 +13,28 @@ body {
 
 h1 {
   margin-top: 2em;
-  font-size: 2.15em;
+  font-size: 2.4em;
   letter-spacing: -1px;
   border-bottom: transparent !important;
 }
 
 h2 {
-  margin-top: 1.5em;
-  margin-bottom: 0px;
-  font-size: 1.5em;
+  margin-top: 2em;
+  margin-bottom: 0.2em;
+  font-size: 2.15em;
   letter-spacing: -1px;
   border-bottom: transparent !important;
 }
 
 h3 {
+  margin-top: 1.5em;
+  margin-bottom: 0.3em;
+  font-size: 1.5em;
+  letter-spacing: -1px;
+  border-bottom: transparent !important;
+}
+
+h4 {
   font-size: 1.25em;
   letter-spacing: -1px;
 }
