fix: change inline-code-style

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -32,8 +32,8 @@ $light-blockquote-quote-image: url('/images/quote-black.png');
 $light-blockquote-quote-color: #000;
 
 // code
-$inline-dimmed-color: #fffbfe;
-$inline-text-color: #da3a6a;
+$inline-dimmed-color: rgba(175, 184, 193, 0.2);
+$inline-text-color: #212429;
 
 // category
 $light-category-border-color: #ecf0f2;
